[project]
name = "editllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.20",
    "click>=8.1.3",
    "flask>=2.3.0",
    "itsdangerous>=2.1.2",
    "jinja2>=3.1.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "langsmith>=0.4.21",
    "openai>=1.102.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "werkzeug>=2.3.0",
]
